added gift bag page and nav

--- a/agenda.html
+++ b/agenda.html
@@ -49,6 +49,9 @@
             <a href="./agenda.html" class="nav__link">Agenda</a>
           </li>
           <li class="nav__item">
+            <a href="./gifts.html" class="nav__link">Gift Bags</a>
+          </li>
+          <li class="nav__item">
             <a href="./register.html" class="nav__link">Register</a>
           </li>
         </ul>
