--- a/gifts.html
+++ b/gifts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Building Blocks for Kids - Golf Outing</title>
+    <title>Gift Bags | Building Blocks for Kids - Golf Outing</title>
     <link
       rel="icon"
       href="./img/bb4k-stacked-logo.svg"
@@ -56,19 +56,9 @@
       </nav>
     </header>
 
-    <!--Intro/Home Section-->
-    <section class="intro" id="home">
-      <h1 class="section__title section__title--intro">
-        2nd Annual Building Blocks for Kids Golf Outing
-      </h1>
-      <h3 class="intro__information">May 5, 2022<br>
-        Someplace Golf Club,
-        Someplace, OH</h3>
-    </section>
-
     <!--About Section-->
     <section class="about" id="about">
-      <h2 class="section__title section__title--about">About</h2>
+      <h2 class="section__title section__title--about">Gift Bags</h2>
       <div class="about">
         <div class="about-info">
           <p>
@@ -86,7 +76,7 @@
           </p>
         </div>
         <div class=about-image>
-          <img src="./img/splash-cam-ufcDM0ApEBs-unsplash.jpg" alt="golf ball on grass">
+          <img src="./img/golfBagExample.jpeg" alt="example of golf tournament gift bag">
         </div>
       </div>
     </section>
