--- a/register.html
+++ b/register.html
@@ -49,6 +49,9 @@
             <a href="./agenda.html" class="nav__link">Agenda</a>
           </li>
           <li class="nav__item">
+            <a href="./gifts.html" class="nav__link">Gift Bags</a>
+          </li>
+          <li class="nav__item">
             <a href="./register.html" class="nav__link">Register</a>
           </li>
         </ul>
@@ -110,6 +113,16 @@
           <div class="form-group col-md-2">
             <label for="inputZip">Zip</label>
             <input type="text" class="form-control" id="inputZip" placeholder="12345"/>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputHandicap">What is your golf handicap?</label>
+            <input type="text" class="form-control" id="inputHandicap" placeholder="15" />
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputShirt">What is your t-shirt size?</label>
+            <input type="text" class="form-control" id="inputShirt" placeholder="XL" />
           </div>
         </div>
         <div class="form-group">
